--- a/scss/layouts/_nav.scss
+++ b/scss/layouts/_nav.scss
@@ -52,6 +52,7 @@
       &::before {
         @include svg-base;
         content: $icon-alert;
+        margin-left: 1rem;
       }
     }
 
@@ -65,6 +66,7 @@
       &::before {
         @include svg-base;
         content: $icon-search;
+        margin-left: 1rem;
       }
     }
   }
